5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1764_1185.log
== TEST (2019-05-30 08:09:54) 
-- CODE:
x = array(eval(input()))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:10:04) 
-- CODE:
from numpy import *
x = array(eval(input()))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:16:47) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = x[h]
		c = x[i]
	i += 1
	h += 1
print(a)
print(b)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:17:06) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = x[h]
		c = x[i]
	i += 1
	h += 1
print(a)
print(b)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:17:43) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = i
		c = h
	i += 1
	h += 1
print(a)
print(b)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:17:59) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = i
		c = h
	i += 1
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:19:14) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		print(i)		
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:19:32) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		print(i)
	i += 1
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:19:42) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		print(i)
	i += 1
	h += 1
print(c)
print(b)
print(a)
-- EXECUTION TIME:
0.352794
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
0
0
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
0
0
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:21:38) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:22:52) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
	if x[h] != b and x[h] > 99:
		c = x[h]
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:23:01) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
	if x[h] != b and x[h] > 99:
		c = h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:23:52) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
i = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
	if h != b and x[h] > 99:
		c = h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:33:40) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		c = -h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:33:43) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		c = -h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:33:56) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		c = 1-h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:34:00) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		c = h-1
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:34:08) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b = h
		c = h-1
	h += 1
print(c)
print(b)
print(a)
-- EXECUTION TIME:
0.405548
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
3
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
8
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:36:22) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = h - b 
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:36:39) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:37:07) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:37:27) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0


h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:37:54) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = c - h 
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:38:12) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = c - h 
	h += 1
print(c)
print(d)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:38:45) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = c - h 
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:39:18) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = h 
	h += 1
print(c)
print(d)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:39:28) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = h 
	h += 1
print(c)
print(d)
print(a)
-- EXECUTION TIME:
0.55349
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
21
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:39:30) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = b - h
		d = h 
	h += 1
print(c)
print(d)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:48:12) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = h
		d = h 
	h += 1
print(c)
print(d)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:48:33) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h
		c = h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:48:42) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		a += 1
		b += h -1
		c = h
	h += 1
print(c)
print(b)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:56:26) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		print(h)
		a += 1
	h += 1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:07:09) 
-- CODE:
from numpy import *
x = array(eval(input()))


a = 0

h = 0
while size(x) > h:
	if x[h] > 99:
		print(h)
		a += 1
	h += 1
print(a)

-- EXECUTION TIME:
0.498447
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
